--- a/config/config.ini
+++ b/config/config.ini
@@ -20,7 +20,7 @@ SMURF_PORT = 62025
 [DISCORD]
 [[TEST]]
 USER = "Embershield#9127"
-TOKEN = NTIxMzcyMDI1NTM3ODIyNzI3.XKzVOg.gpQBcUd3UIQthpKtTYvEnzvUqso
+TOKEN = "Your Token here"
 GUILD = 521368877385646080
 USERID = 302905219036086274
 CHANNEL = 521401412454973451
@@ -33,7 +33,7 @@ WATER = 521412312872124519
 LIGHT = 521412312330928140
 [[SOULSTRUCK]]
 USER = "Embershield#9127"
-TOKEN = NTY1MzIyMDIzODg3NDM3ODI3.XK0vPA.aIx_s_mE0A5sXekcg9mpdfRIGPg
+TOKEN = "Your Token here"
 GUILD = 271444150082207745
 USERID = 302905219036086274
 CHANNEL = 498688084087537685
